--- a/Project1_CigarShop/Project1_CigarShop/Views/Cigar/Index.cshtml
+++ b/Project1_CigarShop/Project1_CigarShop/Views/Cigar/Index.cshtml
@@ -7,7 +7,15 @@
 <h1>Index</h1>
 
 <h4>Cigar</h4>
-<hr />
+
+
+<div>
+    <form asp-action="Index" method="GET" class="form-inline">
+        <label class="sr-only" for="search">Search:</label>
+        <input type="search" class="form-control mb-2 mr-sm-2 mb-sm-0" id="search" name="search" placeholder="Search" />
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Index">
